--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "ditdahdah",
+  "name": "frontend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "postcss.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
+    "build": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "flowbite": "^2.3.0",
-    "tailwindcss": "^3.4.1"
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
