--- a/package.json
+++ b/package.json
@@ -1,19 +1,132 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "",
+  "description": "See it [here](https://morse.artomweb.com) (for desktop)",
   "main": "postcss.config.js",
-  "scripts": {
-    "dev": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
-    "build": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify"
-  },
+ "scripts": {
+  "dev": "concurrently \"npm run dev:tailwind\" \"npm run start\"",
+  "dev:tailwind": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
+  "build": "npm run buildcss && webpack --mode production",
+  "buildcss": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify",
+  "start": "webpack serve --mode development"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
+    "concurrently": "^9.1.0",
     "daisyui": "^4.12.14",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "ansi-regex": "^6.0.1",
+    "ansi-styles": "^6.2.1",
+    "any-promise": "^1.3.0",
+    "anymatch": "^3.1.3",
+    "arg": "^5.0.2",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.3",
+    "browserslist": "^4.24.2",
+    "camelcase-css": "^2.0.1",
+    "caniuse-lite": "^1.0.30001688",
+    "chart.js": "^4.4.7",
+    "chartjs-chart-error-bars": "^4.4.4",
+    "chokidar": "^3.6.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^4.1.1",
+    "cross-spawn": "^7.0.3",
+    "css-selector-tokenizer": "^0.8.0",
+    "cssesc": "^3.0.0",
+    "culori": "^3.3.0",
+    "didyoumean": "^1.2.2",
+    "dlv": "^1.1.3",
+    "eastasianwidth": "^0.2.0",
+    "electron-to-chromium": "^1.5.73",
+    "emoji-regex": "^9.2.2",
+    "escalade": "^3.2.0",
+    "fast-glob": "^3.3.2",
+    "fastparse": "^1.1.2",
+    "fastq": "^1.17.1",
+    "fill-range": "^7.1.1",
+    "foreground-child": "^3.1.1",
+    "fraction.js": "^4.3.7",
+    "function-bind": "^1.1.2",
+    "glob": "^10.3.10",
+    "glob-parent": "^6.0.2",
+    "hasown": "^2.0.1",
+    "is-binary-path": "^2.1.0",
+    "is-core-module": "^2.13.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "isexe": "^2.0.0",
+    "jackspeak": "^2.3.6",
+    "jiti": "^1.21.6",
+    "lilconfig": "^3.1.3",
+    "lines-and-columns": "^1.2.4",
+    "lru-cache": "^10.2.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "minimatch": "^9.0.3",
+    "minipass": "^7.0.4",
+    "mz": "^2.7.0",
+    "nanoid": "^3.3.7",
+    "node-releases": "^2.0.19",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "object-assign": "^4.1.1",
+    "object-hash": "^3.0.0",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-scurry": "^1.10.1",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "pirates": "^4.0.6",
+    "postcss-import": "^15.1.0",
+    "postcss-js": "^4.0.1",
+    "postcss-load-config": "^4.0.2",
+    "postcss-nested": "^6.2.0",
+    "postcss-selector-parser": "^6.1.2",
+    "postcss-value-parser": "^4.2.0",
+    "queue-microtask": "^1.2.3",
+    "read-cache": "^1.0.0",
+    "readdirp": "^3.6.0",
+    "resolve": "^1.22.8",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^4.1.0",
+    "source-map-js": "^1.2.1",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^6.0.1",
+    "sucrase": "^3.35.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "thenify": "^3.3.1",
+    "thenify-all": "^1.6.0",
+    "to-regex-range": "^5.0.1",
+    "ts-interface-checker": "^0.1.13",
+    "typescript": "^5.7.2",
+    "update-browserslist-db": "^1.1.1",
+    "util-deprecate": "^1.0.2",
+    "which": "^2.0.2",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "yaml": "^2.3.4"
   }
 }
